--- a/root/code/templates/header-user.html
+++ b/root/code/templates/header-user.html
@@ -9,7 +9,7 @@
 		<ul class="nav nav-pills">
 		<li class="nav-item"><a href="{{url_for('user_dashboard')}}" class="nav-link active" aria-current="page">Home</a></li>
 		<li class="nav-item"><a href="{{url_for('user_books')}}" class="nav-link">My Books</a></li>
-		<li class="nav-item"><a href="" class="nav-link">Stats</a></li>
+		<li class="nav-item"><a href="{{url_for('user_stats')}}" class="nav-link">Stats</a></li>
 		<li class="nav-item"><a href="{{url_for('user_logout')}}" class="nav-link">Logout</a></li>
 		</ul>
 	</header>
