basic project done

--- a/root/code/templates/liblogin.html
+++ b/root/code/templates/liblogin.html
@@ -39,6 +39,7 @@
             </form>
             <div style="text-align: center;">
                 Don't have credientials? <a href="{{url_for('librarian_register')}}">register Library</a>
+                Forgot Password? <a href="{{url_for('forgot_password')}}">Reset Password</a>
             </div>
         </div>
     </div>
