--- a/root/code/templates/userlogin.html
+++ b/root/code/templates/userlogin.html
@@ -39,6 +39,7 @@
             </form>
             <div style="text-align: center;">
                 Are you a new user? <a href="{{url_for('user_register')}}">register.</a>
+                Forgot Password? <a href="{{url_for('forgot_password')}}">Reset Password</a>
             </div>
             <div style="text-align: center;">
                 Looking for Library Login? <a href="{{url_for('librarian_login')}}">Library Login</a>
