--- a/root/code/templates/header-lib.html
+++ b/root/code/templates/header-lib.html
@@ -10,7 +10,7 @@
 		<li class="nav-item"><a href="{{url_for('librarian_dashboard')}}" class="nav-link active" aria-current="page">Home</a></li>
 		<li class="nav-item"><a href="{{url_for('bookrequests')}}" class="nav-link">Book Requests</a></li>
 		<li class="nav-item"><a href="{{url_for('current_books')}}" class="nav-link">Current Books</a></li>
-		<li class="nav-item"><a href="" class="nav-link">Stats</a></li>
+		<li class="nav-item"><a href="{{url_for('library_stats')}}" class="nav-link">Stats</a></li>
 		<li class="nav-item"><a href="{{url_for('lib_logout')}}" class="nav-link">Logout</a></li>
 		</ul>
 	</header>
