--- a/root/code/templates/forgot_password.html
+++ b/root/code/templates/forgot_password.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-    <h1>Forgot Password</h1>
-    <div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-            <span class="fs-4">Simple header</span>
-          </a>
-    
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="{{url_for('home')}}" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="{{url_for('librarian_login')}}" class="nav-link">Library Login</a></li>
-            <li class="nav-item"><a href="{{url_for('user_login')}}" class="nav-link">Student Login</a></li>
-            <li class="nav-item"><a href="{{url_for('about')}}" class="nav-link">About</a></li>
-          </ul>
-        </header>
-      </div>
-      
-    <form action="/reset_password" method="post">
+  <head>
+      <meta charset="UTF-8">
+      <title>Forgot Password-LMS</title>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  </head>
+  <body>
+	{% include 'header-nonlogin.html' %}
+    <div class="mainbody-nonlogin">
+      <br>  
+      <h1>Don't Panic 🙂</h1>
+      <p>Enter your email address below and we'll send you a link to reset your password.</p>
+    <form action="{{ url_for('home')}}" >
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email" required><br>
-        <input type="submit" value="Submit">
+        <input style="margin-top: 5px;" type="submit" value="Submit">
     </form>
+    </div>
     {% include 'footer.html' %}
 </body>
 </html>
