--- a/root/code/templates/makerequest.html
+++ b/root/code/templates/makerequest.html
@@ -37,9 +37,10 @@
 				<input type="number" class="form-control" id="daysRequested" name="daysRequested" required min="1" max="15">
 				<input type="hidden" name="user_id" value="{{ book.user_id }}">
 				<input type="hidden" name="book_id" value="{{ book.id }}">
-			<button type="submit" class="btn btn-primary">Submit</button>
+			<button type="submit" class="btn btn-primary" style="margin-top: 10px;">Submit</button>
 		</form>
-		<a class="btn btn-secondary"  href="{{ url_for('user_dashboard') }}">Back</a>
+		
+		<a  class="btn btn-secondary"  href="{{ url_for('user_dashboard') }}" style="margin-top: 10px; margin-left: 10px;">Back</a>
 	</div>
 </div>
 </div>
