--- a/root/code/templates/userdash.html
+++ b/root/code/templates/userdash.html
@@ -56,6 +56,7 @@
                   <th>Title</th>
                   <th>Section</th>
                   <th>Author</th>
+                  <th>Avg Rating(5)</th>
                   <th>Action</th>
                 </tr>
               </thead> 
@@ -67,6 +68,7 @@
                               <td>{{ book["title"] }}</td>
                               <td>{{ book["section"] }}</td>
                               <td>{{ book["author"] }}</td>
+                              <td>{{ book['rating']}}</td>
                               <td><a href="{{ url_for('request_book', book_id=book['id']) }}">Request</a></td>
                           </tr>
                       {% endfor %}
