--- a/root/code/static/css/stats_styles.css
+++ b/root/code/static/css/stats_styles.css
@@ -1,4 +1,3 @@
-
 .graph {
 	margin-bottom:1em;
   font:normal 100%/150% arial,helvetica,sans-serif;
@@ -13,7 +12,8 @@
 	text-align:right;
 }
 
-@supports (display:grid) {
+/* Grid layout supported then apply */
+@supports (display:grid) { 
 
 	@media (min-width:32em) {
 
@@ -121,8 +121,7 @@
 			padding:0.5em 0;
 			margin:-1em 0 0;
 			font:normal 85%/120% arial,helvetica,sans-serif;
-/* 			background:white; */
-/* 			box-shadow:0 0 0.25em rgba(0,0,0,0.6); */
+
 			font-weight:bold;
 			opacity:0;
 			transition:opacity 0.5s;
@@ -132,15 +131,8 @@
 		.toggleGraph:checked + table td span,
 		.graph tr:hover td span {
 			width:4em;
-			margin-left:-2em; /* 1/2 the declared width */
+			margin-left:-2em; 
 			opacity:1;
 		}
-
-
-
-    
-
-
-	} /* min-width:32em */
-
-} /* grid only */
+	} 
+} 
