--- a/root/code/static/css/style.css
+++ b/root/code/static/css/style.css
@@ -1,4 +1,4 @@
-.mainbody-nonlogin {
+.mainbody {
     margin: 20px 100px;
     min-height: 550px;
 }
@@ -11,9 +11,7 @@ body {
     text-align: left;
     margin-left: 50px;
     margin-top: 20px;
-
 }
-
 
 #form-body{
     border: 1px solid grey;
@@ -26,12 +24,9 @@ body {
     background-color: salmon;
 }
 
-
 .section-box {
-    border: 4px solid #000; /* Thick black border */
-    border-radius: 10px; /* Rounded corners */
-    /* background-image: url('your-image-url.jpg'); Replace 'your-image-url.jpg' with your actual image URL */
-    background-size: cover; /* Cover the entire box with the background image */
-    padding: 20px; /* Add padding inside the box */
+    border: 4px solid #000; 
+    border-radius: 10px; 
+    background-size: cover; 
+    padding: 20px; 
 }
-/* style for list of books in user dashboard */
