--- a/root/code/templates/addbook.html
+++ b/root/code/templates/addbook.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Librarian Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-  {% include 'header-lib.html' %}
-  <div class="mainbody-nonlogin">
-    <div id="form-body">
-      <h2>Add Book</h2>
-    <form action="" method="POST">
-        <div class="mb-3">
-          <label for="bookTitle" class="form-label" >Book Name<span style="color: red;">*</span>:</label>
-          <input class="form-control" type="text" id="bookTitle" name="bookTitle" required maxlength="100" placeholder="Book title">
-          <input type="hidden" name="section_id" value="{{ section_id }}">
-        </div>
-        <div class="mb-3">
-          <label for="author" class="form-label">Author<span style="color: red;">*</span> </label>
-          <input class="form-control" type="text" id="author" name="author" maxlength="100" required>
-        </div>
-        <div class="mb-3">  
-          <label for="bookImage" class="form-label">Book Image<span style="color: red;">*</span>:</label>
-          <input class="form-control" type="url" id="bookImage" name="bookImage" required>
-        </div>
-        <div class="mb-3">
-          <label for="content" class="form-label">Book Link:</label>
-          <input class="form-control" type="url" id="link" name="link" required>
-        </div>
-        <div class="mb-3">
-          <label for="content" class="form-label">Book Description:</label>
-          <textarea class="form-control" id="Description" name="Description"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Add Book</button>
-      </form>
-    <br>
-    <a class="btn btn-secondary" href="{{url_for('librarian_dashboard')}}">Back to Dashboard</a>
-  </div>
-</div>
-  {% include 'footer.html' %}
-</body>
+  </head>
+  <body>
+    {% include 'header-lib.html' %}
+    <div class="mainbody">
+      <div id="form-body">
+        <h2>Add Book</h2>
+        <form action="" method="POST"></form>
+          <div class="mb-3">
+            <label for="bookTitle" class="form-label">Book Name<span style="color: red;">*</span>:</label>
+            <input class="form-control" type="text" id="bookTitle" name="bookTitle" \
+            required maxlength="100" placeholder="Book title">
+            <input type="hidden" name="section_id" value="{{ section_id }}">
+          </div>
+          <div class="mb-3">
+            <label for="author" class="form-label">Author<span style="color: red;">*</span> </label>
+            <input class="form-control" type="text" id="author" name="author" maxlength="100" required>
+          </div>
+          <div class="mb-3">  
+            <label for="bookImage" class="form-label">Book Image<span style="color: red;">*</span>:</label>
+            <input class="form-control" type="url" id="bookImage" name="bookImage" required>
+          </div>
+          <div class="mb-3">
+            <label for="content" class="form-label">Book Link:</label>
+            <input class="form-control" type="url" id="link" name="link" required>
+          </div>
+          <div class="mb-3">
+            <label for="content" class="form-label">Book Description:</label>
+            <textarea class="form-control" id="Description" name="Description"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Add Book</button>
+        </form>
+        <br>
+        <a class="btn btn-secondary" href="{{url_for('librarian_dashboard')}}">Back to Dashboard</a>
+      </div>
+    </div>
+    {% include 'footer.html' %}
+  </body>
 </html>
