--- a/root/code/templates/addsection.html
+++ b/root/code/templates/addsection.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Librarian Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-  {% include 'header-lib.html' %}
-  <div class="mainbody-nonlogin">
-    <div id="form-body">
-      <h2>Add Section</h2>
-      <form action="" method="POST">
-          <div class="mb-3">
-          <label for="sectionName" class="form-label">Section Name<span style="color: red;">*</span>:</label>
-          <input class="form-control" type="text" id="sectionName" name="sectionName" required maxlength="50">
+  </head>
+  <body>
+    {% include 'header-lib.html' %}
+    <div class="mainbody">
+      <div id="form-body">
+        <h2>Add Section</h2>
+        <form action="" method="POST">
+          <div class="mb-3"></div>
+            <label for="sectionName" class="form-label">Section Name<span style="color: red;">*</span>:</label>
+            <input class="form-control" type="text" id="sectionName" name="sectionName" required maxlength="50">
+          </div>
+          <div class="mb-3"></div>
+            <label class="form-label" for="sectionImage" class="form-label">Section Image<span 
+            style="color: red;">*</span>:</label>
+            <input class="form-control" type="url" id="sectionImage" name="sectionImage" 
+            placeholder="url link for section image">
           </div>
           <div class="mb-3">
-          <label class="form-label" for="sectionImage" class="form-label">Section Image<span style="color: red;">*</span>:</label>
-          <input class="form-control" type="url" id="sectionImage" name="sectionImage" placeholder="url link for section image">
-          </div>
-          <div class="mb-3">
-          <label for="sectionDescription" class="form-label">Section Description<span style="color: red;">*</span>:</label>
-          <input class="form-control" type="text" id="sectionDescription" name="sectionDescription" required>
+            <label for="sectionDescription" class="form-label">Section Description<span 
+            style="color: red;">*</span>:</label>
+            <input class="form-control" type="text" id="sectionDescription" name="sectionDescription" required>
           </div>
           <button type="submit" class="btn btn-primary">Add Section</button>
-      </form>
-    <br>
-    <a class="btn btn-secondary" href="{{url_for('librarian_dashboard')}}">Back to Dashboard</a>
-  </div>
-</div>
-{% include 'footer.html' %}
-</body>
+        </form>
+        <br>
+        <a class="btn btn-secondary" href="{{url_for('librarian_dashboard')}}">Back to Dashboard</a>
+      </div>
+    </div>
+    {% include 'footer.html' %}
+  </body>
 </html>
