--- a/root/code/templates/bookrequests.html
+++ b/root/code/templates/bookrequests.html
@@ -1,65 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Book Requests</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <title>Book Requests</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
   {% include 'header-lib.html' %}
-  <div class="mainbody-nonlogin">
+  <div class="mainbody">
     <div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
-        <form class="w-25 me-2" role="search" action="" method="post">
-          <div class="d-flex">
-            <input type="search" class="form-control" placeholder="Search Books..." aria-label="Search" name="search_keyword">
-            <select name="selected_section" id="selected_section" style="margin-left: 15px;">
-              <option value="">All Sections</option>
-              {% for section in sections %}
-              <option value="{{ section }}">{{ section }}</option>
-              {% endfor %}
-          </select>
-            <button type="submit" class="btn btn-secondary " style="margin-left: 15px;">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"></path>
-              </svg>
-            </button>
-          </div>
-        </form>
-      </div>
-
-      <div>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="alert alert-warning">
-            {% for message in messages %}
-            {{ message }}
+      <form class="w-25 me-2" role="search" action="" method="post">
+        <div class="d-flex">
+          <input type="search" class="form-control" placeholder="Search Books..." 
+          aria-label="Search" name="search_keyword">
+          <select name="selected_section" id="selected_section" style="margin-left: 15px;">
+            <option value="">All Sections</option>
+            {% for section in sections %}
+            <option value="{{ section }}">{{ section }}</option>
             {% endfor %}
-            </div>
-        {% endif %}
-        {% endwith %}
+          </select>
+          <button type="submit" class="btn btn-secondary " style="margin-left: 15px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" 
+            class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-
+              .001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.
+              1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"></path>
+            </svg>
+          </button>
+        </div>
+      </form>
+    </div>
+    <div>
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+      <div class="alert alert-warning">
+        {% for message in messages %}
+        {{ message }}
+        {% endfor %}
       </div>
-      <br>
+      {% endif %}
+      {% endwith %}
+    </div>
+    <br>
     <h1>Books Requests</h1>
     <ul>
-        <!-- Loop through the list of books and generate list items -->
-        {% for book in book_requests %}
-            <li>
-                <h2>{{ book["book_title"] }}</h2>
-                <p>{{book["user_id"]}}</p>
-                <p>{{book["id"]}}</p>
-                <a href="{{ url_for('view_details', r_id=book['id']) }}" class="btn-view">View</a>
-                <a href="{{ url_for('grantboooks', r_id=book['id']) }}" class="btn-grant">Grant</a>
-                <a href="{{ url_for('rejectbooks', r_id=book['id']) }}" class="btn-reject">Reject</a>
-            </li>
-        {% endfor %}
-        {% if book_requests|length == 0 %}
-            <li>There are no book requests.</li>
-        {% endif %}
+      {% for book in book_requests %}
+      <li>
+        <h2>{{ book["book_title"] }}</h2>
+        <p>{{book["user_id"]}}</p>
+        <p>{{book["id"]}}</p>
+        <a href="{{ url_for('view_details', r_id=book['id']) }}" class="btn-view">View</a>
+        <a href="{{ url_for('grantboooks', r_id=book['id']) }}" class="btn-grant">Grant</a>
+        <a href="{{ url_for('rejectbooks', r_id=book['id']) }}" class="btn-reject">Reject</a>
+      </li>
+      {% endfor %}
+      {% if book_requests|length == 0 %}
+      <li>There are no book requests.</li>
+      {% endif %}
     </ul>
     <a href="{{ url_for('librarian_dashboard') }}">Back to Librarian Dashboard</a>
-
   </div>
-    {% include 'footer.html' %}
-  </body>
+  {% include 'footer.html' %}
+</body>
 </html>
