--- a/root/code/templates/forgot_password.html
+++ b/root/code/templates/forgot_password.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <title>Forgot Password-LMS</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  </head>
-  <body>
-	{% include 'header-nonlogin.html' %}
-    <div class="mainbody-nonlogin">
-      <br>  
-      <h1>Don't Panic 🙂</h1>
-      <p>Enter your email address below and we'll send you a link to reset your password.</p>
+<head>
+  <meta charset="UTF-8">
+  <title>Forgot Password-LMS</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body>
+  {% include 'header-nonlogin.html' %}
+  <div class="mainbody">
+    <br>  
+    <h1>Don't Panic 🙂</h1>
+    <p>Enter your email address below and we'll send you a link to reset your password.</p>
     <form action="{{ url_for('home')}}" >
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br>
-        <input style="margin-top: 5px;" type="submit" value="Submit">
+      <label for="email">Email:</label><br>
+      <input type="email" id="email" name="email" required><br>
+      <input style="margin-top: 5px;" type="submit" value="Submit">
     </form>
-    </div>
-    {% include 'footer.html' %}
+  </div>
+  {% include 'footer.html' %}
 </body>
 </html>
