--- a/root/code/templates/index.html
+++ b/root/code/templates/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <title>Home-LMS</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  </head>
-  <body>
-    {% include 'header-nonlogin.html' %}
-    <div class="mainbody-nonlogin"> <!-- this is for main body for non login -->
-      <h1>Welcome to E-Library Management System</h1>
-      <br>
-      <p>Welcome to the E-Library Management System! Our software provides a convenient way to manage
-         and organize your library resources digitally. With our system, you can easily keep track of 
-         books, manage user accounts, and streamline library operations.</p>
-      <p>To navigate through our website, please use the appropriate buttons on the header:</p>
-      <ul>
-        <li>Click on "Home" to go to the home page.</li>
-        <li>Click on "Library Login" to access the librarian login page.</li>
-        <li>Click on "Student Login" to access the student login page.</li>
-        <li>Click on "About" to learn more about our library management system.</li>
-        <li>Click on "Contact" to reach out</li>
-      </ul>
-      <p>Thank you, happy reading !</p>
-    </div>
-    {% include 'footer.html' %}
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Home-LMS</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body>
+  {% include 'header-nonlogin.html' %}
+  <div class="mainbody">
+    <h1>Welcome to E-Library Management System</h1>
+    <br>
+    <p>Welcome to the E-Library Management System! Our software provides a convenient way to manage
+       and organize your library resources digitally. With our system, you can easily keep track of 
+       books, manage user accounts, and streamline library operations.</p>
+    <p>To navigate through our website, please use the appropriate buttons on the header:</p>
+    <ul>
+      <li>Click on "Home" to go to the home page.</li>
+      <li>Click on "Library Login" to access the librarian login page.</li>
+      <li>Click on "Student Login" to access the student login page.</li>
+      <li>Click on "About" to learn more about our library management system.</li>
+      <li>Click on "Contact" to reach out</li>
+    </ul>
+    <p>Thank you, happy reading !</p>
+  </div>
+  {% include 'footer.html' %}
+</body>
 </html>
