--- a/root/code/templates/libcurrentbooks.html
+++ b/root/code/templates/libcurrentbooks.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Librarian Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+	<title>Librarian Dashboard</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+		rel="stylesheet" 
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+		crossorigin="anonymous">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-  {% include 'header-lib.html' %}
-  <div class="mainbody-nonlogin">
-	<div>
-		{% with messages = get_flashed_messages() %}
-		{% if messages %}
-			<div class="alert alert-warning">
-			{% for message in messages %}
-			{{ message }}
-			{% endfor %}
-			</div>
-		{% endif %}
-		{% endwith %}
-	</div>
-	<br>
-	<h1>Current Books</h1>
-	<br>    
-	<div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
-        <form class="w-25 me-2" role="search" action="" method="post">
-          <div class="d-flex">
-            <input type="search" class="form-control" placeholder="Search Books..." aria-label="Search" name="search_keyword">
-            <select name="selected_section" id="selected_section" style="margin-left: 15px;">
-              <option value="">All Sections</option>
-              {% for section in sections %}
-              <option value="{{ section }}">{{ section }}</option>
-              {% endfor %}
-          </select>
-            <button type="submit" class="btn btn-secondary " style="margin-left: 15px;">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"></path>
-              </svg>
-            </button>
-          </div>
-        </form>
-	</div>
-	<br>
+	{% include 'header-lib.html' %}
+	<div class="mainbody">
+		<div>
+			{% with messages = get_flashed_messages() %}
+			{% if messages %}
+				<div class="alert alert-warning">
+				{% for message in messages %}
+				{{ message }}
+				{% endfor %}
+				</div>
+			{% endif %}
+			{% endwith %}
+		</div>
+		<br>
+		<h1>Current Books</h1>
+		<br>    
+		<div class="text-center mt-5 d-flex justify-content-center align-items-center me-md-auto">
+			<form class="w-25 me-2" role="search" action="" method="post">
+				<div class="d-flex">
+					<input type="search" class="form-control" placeholder="Search Books..." aria-label="Search"
+						name="search_keyword">
+					<select name="selected_section" id="selected_section" style="margin-left: 15px;">
+						<option value="">All Sections</option>
+						{% for section in sections %}
+						<option value="{{ section }}">{{ section }}</option>
+						{% endfor %}
+					</select>
+					<button type="submit" class="btn btn-secondary " style="margin-left: 15px;">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" 
+						class="bi bi-search" viewBox="0 0 16 16">
+							<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 
+							1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5
+							 0 0 1 11 0"></path>
+						</svg>
+					</button>
+				</div>
+			</form>
+		</div>
+		<br>
 		{% if books %}
 			<table class="table">
 				<thead>
@@ -74,11 +80,8 @@
 		{% else %}
 			<p>There are no current books.</p>
 		{% endif %}
-
-
-	<a href="{{ url_for('librarian_dashboard') }}">Back to Librarian Dashboard</a>
-</div>
-
+		<a href="{{ url_for('librarian_dashboard') }}">Back to Librarian Dashboard</a>
+	</div>
 	{% include 'footer.html' %}
 </body>
 </html>
