--- a/root/code/templates/libdash.html
+++ b/root/code/templates/libdash.html
@@ -1,74 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Librarian Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <title>Librarian Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
   {% include 'header-lib.html' %}
-  <div class="mainbody-nonlogin">
+  <div class="mainbody">
     <div>
       {% with messages = get_flashed_messages() %}
       {% if messages %}
-          <div class="alert alert-warning">
-          {% for message in messages %}
-          {{ message }}
-          {% endfor %}
-          </div>
+      <div class="alert alert-warning">
+        {% for message in messages %}
+        {{ message }}
+        {% endfor %}
+      </div>
       {% endif %}
       {% endwith %}
     </div>
     <br>
-    <div >
+    <div>
       <div style="text-align: left; margin-left: 50px;">
         <h3>Sections</h3>
       </div>
     </div>
     <div class="text-center d-flex justify-content-center align-items-center me-md-auto">
       <form class="w-25 me-2" role="search" action="" method="post">
-          <div class="d-flex">
-            <input type="search" class="form-control" placeholder="Search Sections..." aria-label="Search" name="search_keyword">
-            <button type="submit" class="btn btn-secondary " style="margin-left: 15px;">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"></path>
-              </svg>
-            </button>
-          </div>
+        <div class="d-flex">
+          <input type="search" class="form-control" placeholder="Search Sections..." aria-label="Search"
+            name="search_keyword">
+          <button type="submit" class="btn btn-secondary " style="margin-left: 15px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-search" viewBox="0 0 16 16">
+              <path
+                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1
+         1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5
+          0 0 1 11 0"></path>
+            </svg>
+          </button>
+        </div>
       </form>
     </div>
     <br>
     <div>
       {% if sections %}
-        <div class="row">
-          {% for section in sections %}
-            <div class="col-md-4">  
-              <div class="section-box" style="background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('{{ section.image }}');background-size: cover; background-position: center;">
-                  <h4 style="text-align: center;">{{ section.name }}</h4>
-                  <p >Description: {{ section.description }}</p>
-                <div style="text-align: center;">
-                <a href="{{url_for('show_books', section_id=section.id)}}" class="btn btn-primary btn-sm">Show all Books</a>
-                <a href="{{url_for('add_book', section_id=section.id)}}" class="btn btn-primary btn-sm">Add Book</a>
-                <a href="{{url_for('delete_section', section_id=section.id)}}" class="btn btn-primary btn-sm">Delete Section</a>
-              </div>
-              </div>
+      <div class="row">
+        {% for section in sections %}
+        <div class="col-md-4">
+          <div class="section-box"
+            style="background-image: linear-gradient(rgba(255, 255, 255, 0.5),
+         rgba(255, 255, 255, 0.5)), url('{{ section.image }}');background-size: cover;
+        background-position: center;">
+            <h4 style="text-align: center;">{{ section.name }}</h4>
+            <p>Description: {{ section.description }}</p>
+            <div style="text-align: center;">
+              <a href="{{url_for('show_books', section_id=section.id)}}"
+                class="btn btn-primary btn-sm">Show all Books</a>
+              <a href="{{url_for('add_book', section_id=section.id)}}"
+                class="btn btn-primary btn-sm">Add Book</a>
+              <a href="{{url_for('delete_section', section_id=section.id)}}"
+                class="btn btn-primary btn-sm">Delete Section</a>
             </div>
-            {% if loop.index % 3 == 0 %}
-              </div><div class="row">
-            {% endif %}
-          {% endfor %}
+          </div>
         </div>
+        {% if loop.index % 3 == 0 %}
+      </div>
+      <div class="row">
+        {% endif %}
+        {% endfor %}
+      </div>
       {% else %}
-        <div class="text-center">
-          <p>No sections found, kindly create by using the below create button.</p>
-        </div>
+      <div class="text-center">
+        <p>No sections found, kindly create by using the below create button.</p>
+      </div>
       {% endif %}
     </div>
     <div class="text-center">
       <a href="{{url_for('add_section')}}" class="btn btn-primary">Add Section</a>
     </div>
   </div>
-    {% include 'footer.html' %}
+  {% include 'footer.html' %}
 </body>
 </html>
