--- a/root/code/templates/liblogin.html
+++ b/root/code/templates/liblogin.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
     <title>Librarian Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     {% include 'header-nonlogin.html' %}
-    <div class="mainbody-nonlogin">
+    <div class="mainbody">
         <br>
-        <h2 style="text-align: center; font-size:xx-large;" >Welcome, Back!</h2> <!-- Greeting heading for users -->
-        <h3 style="text-align: center; font-size: large;">Login with your credientials</h3>
+        <h2 style="text-align: center; font-size:xx-large;">Welcome, Back!</h2> 
+        <h3 style="text-align: center; font-size: large;">Login with your credentials</h3>
         <div>
             <br>
             {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <div class="alert alert-warning">
-                {% for message in messages %}
-                {{ message }}
-                {% endfor %}
+                    {% for message in messages %}
+                        {{ message }}
+                    {% endfor %}
                 </div>
             {% endif %}
             {% endwith %}
@@ -29,16 +31,20 @@
             <form action="" method="post">
                 <div class="mb-3">
                     <label for="username" class="form-label">Username<span style="color: red;">*</span></label>
-                    <input type="text" class="form-control" id="username" placeholder="eg. ganeshlibrary123" name="u_name" pattern="[a-z0-9]{4,20}" title="Username should only contain lowercase alphabets and numbers, and length should be between 4 and 20 characters" required>
+                    <input type="text" class="form-control" id="username" placeholder="eg. ganeshlibrary123" 
+                        name="u_name" pattern="[a-z0-9]{4,20}" title="Username should only contain lowercase alphabets 
+                        and numbers, and length should be between 4 and 20 characters" required>
                 </div>
                 <div class="mb-3">
                     <label for="pwd" class="form-label">Password<span style="color: red;">*</span></label>
-                    <input type="password" class="form-control" id="pwd" name="pwd" pattern="^(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{5,50}$" title="Password should be between 5 and 50 characters long, and should contain at least one special character" required>
+                    <input type="password" class="form-control" id="pwd" name="pwd" 
+                        pattern="^(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{5,50}$" title="Password should be between 5 and 50
+                        characters long, and should contain at least one special character" required>
                 </div>
                 <input type="submit" class="btn btn-primary" value="Login"> 
             </form>
             <div style="text-align: center;">
-                Don't have credientials? <a href="{{url_for('librarian_register')}}">register Library</a>
+                Don't have credentials? <a href="{{url_for('librarian_register')}}">register Library</a>
                 Forgot Password? <a href="{{url_for('forgot_password')}}">Reset Password</a>
             </div>
         </div>
