--- a/root/code/templates/payment.html
+++ b/root/code/templates/payment.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <title>Book Payment</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+	rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+	crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
   {% include 'header-user.html' %}
-  <div class="mainbody-nonlogin">
+  <div class="mainbody">
 	{% if flash_message %}
 		<div class="flash-message">
 			{{ flash_message }}
@@ -16,18 +18,17 @@
 	{% endif %}
 	<br>
 	<h1>Book Payment</h1>
-
 	<h2>Book Details</h2>
 	<p>Title: {{bookDetails.title}}</p>
 	<p>Author: {{bookDetails.author}}</p>
 	<p>Price: {{bookDetails.price}}</p>
-
 	<h2>User Details</h2>
 	<p>Name: {{userDetails.name}}</p>
 	<p>User ID: {{userDetails.email}}</p>
 	<h2>Payment Form</h2>
 	<form action="" method="POST">
-		<p>Are you sure to make payment for this book, after making the payment you will get pdf of this book.</p>
+		<p>Are you sure to make payment for this book, 
+			after making the payment you will get pdf of this book.</p>
 		<br>
 		<input type="submit" value="Pay">
 	</form>
