--- a/root/code/templates/rate.html
+++ b/root/code/templates/rate.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
     <title>Rate and Review</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+	rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+	crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
   {% include 'header-user.html' %}
-  <div class="mainbody-nonlogin">
+  <div class="mainbody">
 	<div class="book-details">
 		<h1>Book Title: {{ book.title }}</h1>
 		<h2>Book Author: {{ book.author }}</h2>
 		<img src="{{ book.image }}" alt="Book Image">
 	</div>
-
 	<form action="" method="POST">
 		<input type="hidden" name="book_id" value="{{ book.id }}">
 		<div class="rating">
@@ -29,12 +30,10 @@
 			<input type="radio" id="star1" name="rating" value="1">
 			<label for="star1" title="1 star">1 star</label>
 		</div>
-		
 		<div class="review">
 			<label for="review">Review:</label>
 			<textarea id="review" name="review" rows="4" cols="50"></textarea>
 		</div>
-		
 		<button type="submit">Submit</button>
 	</form>
   </div>
