--- a/root/code/templates/stats-lib.html
+++ b/root/code/templates/stats-lib.html
@@ -2,17 +2,18 @@
 <html>
 <head>
     <title>Library Stats</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+	rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+	crossorigin="anonymous">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 	<link rel= "stylesheet" href= "{{ url_for('static', filename='css/stats_styles.css') }}">
 </head>
 <body>
 	{% include 'header-lib.html' %}
-	<div class="mainbody-nonlogin">
+	<div class="mainbody">
 		<div class="row">
 			<div class="col-md-6">
-				<!-- First div content here -->
 				<table class="graph">
 					<caption>Section wise Books Available</caption>
 					<thead>
@@ -31,8 +32,6 @@
 					</tbody>
 				</table>
 			</div>
-
-			
 			<div class="col-md-6">
 				<table class="graph">
 					<caption>Books Summary:</caption>
@@ -51,8 +50,6 @@
 						{% endfor %}
 					</tbody>	
 				</table>
-				<!-- Content for 80% of the available space -->
-			<!-- Second div content here -->
 		</div>
 	</div>
 	<br><br><br><br><br><br>
@@ -82,7 +79,6 @@
 			<h2>Most Read Book:{{most_read_book}}</h2>
 			<h2>Total Active Students:{{active_users}}</h2>
 		</div>		
-
 	</div>
 	<br>
 	<hr>
@@ -106,7 +102,6 @@
 				</tbody>
 			</table>	
 		</div>
-	
 		<div class="col-md-6">
 			<h2>User Reviews</h2>
 			<table class="table table-scroll table-striped">
