--- a/root/code/templates/stats-user.html
+++ b/root/code/templates/stats-user.html
@@ -2,14 +2,16 @@
 <html>
 <head>
     <title>User Stats: {{ userinfo["Name"] }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+	rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+	crossorigin="anonymous">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 	<link rel= "stylesheet" href= "{{ url_for('static', filename='css/stats_styles.css') }}">
 </head>
 <body>
 	{% include 'header-user.html' %}
-	<div class="mainbody-nonlogin">
+	<div class="mainbody">
 		<div class="row">
 			<div class="col-md-6">
 				<!-- First div content here -->
@@ -31,7 +33,6 @@
 					</tbody>
 				</table>
 			</div>
-
 			<div class="col-md-6">
 					<table class="graph">
 						<caption>Books Available vs Books Read vs Downloaded:</caption>
@@ -50,13 +51,9 @@
 							{% endfor %}
 						</tbody>	
 					</table>
-					<!-- Content for 80% of the available space -->
-				<!-- Second div content here -->
 			</div>
 		</div>
 		<br><br><br><br><br><br>
-
-		
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Most Read Books</h2>
@@ -80,7 +77,8 @@
 			<div class="col-md-6">
 				<h2>Your Percentage of Books Read:{{user_percentage['Percentage of Books Read']}}</h2>
 				<h2>Read Index: {{user_percentage['Read Index']}}</h2>
-				<p>There were Total: {{user_percentage['Total']}} from which you have read {{user_percentage['Books Read']}}</p>
+				<p>There were Total: {{user_percentage['Total']}} from which you have read 
+					{{user_percentage['Books Read']}}</p>
 			</div>		
 		</div>
 	{% include 'footer.html' %}
