--- a/root/code/templates/userbooks.html
+++ b/root/code/templates/userbooks.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <title>User Books</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
   {% include 'header-user.html' %}
-  <div class="mainbody-nonlogin">
+  <div class="mainbody">
       <div class="text-center">
         <h1>Your Current Books </h1>
       </div>
@@ -49,9 +51,11 @@
                             <td>{{ book["author"] }}</td>
                             <td>{{ book["days remaining"] }}</td>
                             <td>
-                                <a href="{{ url_for('return_book', book_id=book['id'] , user_id=userinfo['userid']) }}">Return</a>
+                                <a href="{{ url_for('return_book', book_id=book['id'] , user_id=use
+                                rinfo['userid']) }}">Return</a>
                                 <a href="{{ url_for('view_book', book_id=book['id']) }}">View</a>
-                                <a href="{{ url_for('download_book', book_id=book['id'], user_id=userinfo['userid']) }}">Download</a>
+                                <a href="{{ url_for('download_book', book_id=book['id'], user_
+                                id=userinfo['userid']) }}">Download</a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -67,7 +71,6 @@
     <div class = "tableheaders">
         <h3>List of completed books</h3>
     </div>
-
         <div class="col-xs-8 col-xs-offset-2"></div>
             <table class="table table-scroll table-striped">
                 <thead>
@@ -101,8 +104,6 @@
                     {% endif %}
                 </tbody>
             </table>
-       
-
             <br>
         <div class = "tableheaders">
             <h3>List of Requested books</h3>
@@ -126,7 +127,8 @@
                                 <td>{{ book["title"] }}</td>
                                 <td>{{ book["section"] }}</td>
                                 <td>{{ book["author"] }}</td>
-                                <td><a href="{{ url_for('cancel_book', book_id=book['id'],  user_id=userinfo['userid']) }}">Cancel</a></td>
+                                <td><a href="{{ url_for('cancel_book', book_id=book['id'],
+                                      user_id=userinfo['userid']) }}">Cancel</a></td>
                             </tr>
                         {% endfor %}
                     {% else %}
@@ -137,7 +139,6 @@
                 </tbody>
             </table>
         </div>
-
         {% include 'footer.html' %}
 </body>
 </html>
