--- a/root/code/templates/index.html
+++ b/root/code/templates/index.html
@@ -7,15 +7,15 @@
   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body>
+<body class="backgroundimage">
   {% include 'header-nonlogin.html' %}
   <div class="mainbody">
     <h1>Welcome to E-Library Management System</h1>
     <br>
-    <p>Welcome to the E-Library Management System! Our software provides a convenient way to manage
-       and organize your library resources digitally. With our system, you can easily keep track of 
+    <p>Welcome to the E-Library Management System! This software provides a convenient way to manage
+       and organize your library resources digitally. With this system, you can easily keep track of 
        books, manage user accounts, and streamline library operations.</p>
-    <p>To navigate through our website, please use the appropriate buttons on the header:</p>
+    <p>To navigate through the website, please use the appropriate buttons on the header:</p>
     <ul>
       <li>Click on "Home" to go to the home page.</li>
       <li>Click on "Library Login" to access the librarian login page.</li>
