--- a/root/code/templates/registerlib.html
+++ b/root/code/templates/registerlib.html
@@ -6,7 +6,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body>
+<body class="backgroundimage">
     {% include 'header-nonlogin.html' %}
     <div class="mainbody">
         <div id="form-body">
