--- a/root/code/templates/header-lib.html
+++ b/root/code/templates/header-lib.html
@@ -2,13 +2,10 @@
 	<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
 		<a href="{{url_for('home')}}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto 
 		text-dark text-decoration-none">
-			<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" 
-			class="bi bi-person" viewBox="0 0 16 16">
-				<path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 
-				1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.
-				516 10.68 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
-			</svg>        
-			<span style="margin-left: 5px;"  class="fs-4">{{libinfo["Name"]}}</span>
+		<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+			<path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
+		  </svg>      
+			<span style="margin-left: 5px; "  class="fs-4">{{libinfo["Name"]}}</span>
 		</a>
 		<ul class="nav nav-pills">
 			<li class="nav-item"><a href="{{url_for('librarian_dashboard')}}" class="nav-link active" 
