--- a/root/code/templates/liblogin.html
+++ b/root/code/templates/liblogin.html
@@ -8,7 +8,7 @@
     crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body>
+<body class="backgroundimage">
     {% include 'header-nonlogin.html' %}
     <div class="mainbody">
         <br>
