--- a/root/code/templates/userlogin.html
+++ b/root/code/templates/userlogin.html
@@ -8,7 +8,7 @@
     crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body>
+<body class="backgroundimage">
     {% include 'header-nonlogin.html' %}
     <div class="mainbody">
         <h2 style="text-align: center; font-size:xx-large;" >Welcome, Back!</h2> 
